# pdftool

./: .gitignore  AGENT.md  PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  docs.yml  release.yml
.tauri/keys/: priska-pdf-tool.key.pub
docs/: 404.html  Gemfile  _config.yml  index.html
docs/_data/: de.yml  en.yml
docs/_includes/: language-switcher.html  navigation.html  sidebar.html
docs/_layouts/: default.html  home.html  page.html
docs/assets/css/: style.css
docs/de/: about.md  faq.md  features.md  getting-started.md  index.md  keyboard-shortcuts.md  troubleshooting.md
docs/en/: about.md  faq.md  features.md  getting-started.md  index.md  keyboard-shortcuts.md  troubleshooting.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: app.yml
src-tauri/src/: lib.rs  main.rs  pdf_merger.rs
src/core/: Commands.ts  DocumentManager.ts  PageReference.ts  PdfDocument.ts  UndoManager.ts
src/manipulation/: PdfMerger.ts
src/rendering/: MainViewer.ts  ThumbnailRenderer.ts
src/ui/: AboutDialog.ts  AppMenu.ts  MetadataDialog.ts
src/utils/: FileHandler.ts  I18nManager.ts  KeyboardHandler.ts  Loading.ts  Logger.ts  ThemeManager.ts  Toast.ts  UpdateManager.ts
